Always display the scroll-bar to prevent jumpiness in help view

--- a/src/client/scss/_main.scss
+++ b/src/client/scss/_main.scss
@@ -2,6 +2,7 @@
 
 html {
   font-family: ProximaNova-Regular, sans-serif;
+  overflow-y: scroll;
 }
 
 body {
